# trav_loss_study

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
config/: training_example.yaml
datasets/: __init__.py  goose_trav.py
preprocessing/: __init__.py  gicp_poses.py  trav_from_labels.py  trav_from_terrain.py  trav_from_traj.py
resources/: goose_cfg.yaml  goose_cfg_trav.yaml  goose_preprocess.yaml  rellis_preprocess.yaml  tartan_preprocess.yaml  train_goose.yaml  train_goose_trav.yaml  train_trav.yaml  trav_composite_label_cfg.yaml
scripts/: preprocess_goose.py  preprocess_rellis.py  study_losses.py  train_goose.py  visualize_goose.py  visualize_goose2.py  visualize_goose2_apairo.py  visualize_goose2_web.py  visualize_rellis_preprocess.py
scripts/preprocess/: preprocess_goose.py  preprocess_rellis.py
scripts/train/: study_losses.py  train_goose.py
scripts/visualize/: visualize_goose.py  visualize_goose2_apairo.py  visualize_rellis_preprocess.py
src/: datasets.py  trainer.py
src/core/: __init__.py  metrics.py  predictor.py  training.py  utils.py  validator.py
src/datasets/: __init__.py  goose.py  goose_trav.py  rellis.py  tartan_trav.py  tartan_trav_torch.py  tartan_trav_train.py
src/losses/: __init__.py  binary_losses.py  custom_losses.py  dice_loss.py  focal_loss.py  losses.py  lovasz_softmax.py  pu_loss.py
src/models/: __init__.py  sparse_trav_net.py  spatial_context.py  torchsparse_basic_blocks.py  torchsparse_minkunet.py  torchsparse_sep.py
src/preprocessing/: __init__.py  build_label_cfg.py  label_heights.py  trav_label_fn.py
src/scripts/: __init__.py  eval_trav.py  preprocess_trav.py  study_goose.py  study_goose2.py  study_losses.py  (+3 more)
trav_loss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+14 files in other folders)
