[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trav_loss"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "open3d",
    "torch-geometric",
    "pandas",
    "scipy",
    "tensorboard",
    

    "apairo @ file:///home/abresset/dev/apairo",
    "apairo-visu @ file:///home/abresset/dev/apairo_visu",
    "torchsparse @ file:///home/abresset/dev/torchsparse",	
]
