[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trav_loss"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "pandas",
    "scipy",
    "tensorboard",
    
    "torchsparse @ git+https://github.com/augustin-bresset/torchsparse.git",
    "apairo @ git+https://github.com/apairo-robotics/apairo.git",
    "apairo-visu @ git+https://github.com/apairo-robotics/apairo_visu.git",
    "apairo-preprocess @ git+https://github.com/apairo-robotics/apairo_preprocess.git",
    
]
